# Substack-Scraper

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MIGRATION.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  example_usage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  substack_scraper.py  substack_scraper_v1_legacy.py
.github/workflows/: ci.yml  release.yml
config/: default_config.yaml
src/substack_scraper/: __init__.py  checkpoint.py  cli.py  config.py  exporter.py  parser.py  scraper.py
tests/: __init__.py  test_checkpoint.py  test_config.py  test_exporter.py  test_parser.py  test_scraper.py
